add: aggiunta sezione header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html-css-booleaner</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+       <img class="header-imagine" src="./img/logo.svg" alt="Logo">
+       <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+       <p class="color-grigio">Scritto da <span class="color-azzurro">The booleaner</span> <br><span class="font-piccolo">il 10/10/2020</span> </p>
+    </header>
 </body>
 </html>
