add: Aggiunta immagini e relative didascalie

--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html-css-booleaner</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
-       <img class="header-imagine" src="./img/logo.svg" alt="Logo">
-       <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-       <p class="color-grigio">Scritto da <span class="color-azzurro">The booleaner</span> <br><span class="font-piccolo">il 10/10/2020</span> </p>
+        <img class="header-imagine" src="./img/logo.svg" alt="Logo">
     </header>
+    <main>
+        <div>
+
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <p class="color-grigio"> Scritto da <span class="color-azzurro">The booleaner</span> <br><span
+                    class="font-piccolo">il 10/10/2020</span> </p>
+        </div>
+        <div>
+            <img src="./img/tim-1.jpg" alt="Tim">
+            <img src="./img/tim-2.jpg" alt="Tim">
+            <p class="didascalia"> 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br> 2nd
+                Photo: Wimedia, by Paul Clark </p>
+        </div>
+    </main>
 </body>
+
 </html>
