--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         </div>
         <section>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                laoreet dolore magna aliquam erat volutpat. Ut wisi enim. ad minim veniam, quis nostrud <span class="evidenziato">exerci tation
-                ullamcorper suscipit lobortis nisi ut aliquip ex ea commodo consequat.</span> Duis autem vel eum iriure dolor
+                laoreet dolore magna aliquam erat volutpat. Ut wisi enim. ad minim veniam, quis nostrud <span
+                    class="evidenziato">exerci tation
+                    ullamcorper suscipit lobortis nisi ut aliquip ex ea commodo consequat.</span> Duis autem vel eum
+                iriure dolor
                 in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at
                 vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis
                 dolore te feugait nulla facilisi.
@@ -36,11 +38,42 @@
         </section>
         <section>
             <ul>
-                <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
-                <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
-                <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
+                <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                    ut laoreet dolore magna aliquam erat volutpat.</li>
+                <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                    aliquip ex ea commodo consequat.</li>
+                <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                    ut laoreet dolore magna aliquam erat volutpat.</li>
             </ul>
         </section>
+        <section>
+            <table class="table-bordo">
+                <thead class="table-intestazione">
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tr class="table-contenuto-dispari">
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</th>
+                </tr>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</th>
+                </tr>
+                <tr class="table-contenuto-dispari">
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</th>
+                </tr>
+
+            </table>
+        </section>
+        
     </main>
 </body>
 
