--- a/index.html
+++ b/index.html
@@ -58,23 +58,50 @@
                 <tr class="table-contenuto-dispari">
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</th>
+                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat
+                        consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia
+                        modi. Totam saepe quibusdam natus harum.</th>
                 </tr>
                 <tr>
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</th>
+                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat
+                        consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia
+                        modi. Totam saepe quibusdam natus harum.</th>
                 </tr>
                 <tr class="table-contenuto-dispari">
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</th>
+                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat
+                        consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia
+                        modi. Totam saepe quibusdam natus harum.</th>
                 </tr>
 
             </table>
         </section>
-        
+        <section>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
+                ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor
+                in hendrerit in vulputate velit esse molestie consequat, vel <span class="evidenziato"> illum dolore eu
+                    feugiat nulla facilisis at
+                    vero eros et accumsan et iusto </span>odio dignissim qui blandit praesent luptatum zzril delenit
+                augue duis
+                dolore te feugait nulla facilisi.</p>
+        </section>
+
     </main>
+    <footer>
+        <section>
+            <h5>Potrebbe interessarti:</h5>
+            <div class="prima-proposta">
+                Lorem ipsum dolor
+            </div>
+            <div class="seconda-proposta">
+                Lorem ipsum dolor
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
