fix: correzione esercizio

--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
                 <tr class="table-contenuto-dispari">
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat
+                    <th class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat
                         consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia
                         modi. Totam saepe quibusdam natus harum.</th>
                 </tr>
                 <tr>
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat
+                    <th class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat
                         consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia
                         modi. Totam saepe quibusdam natus harum.</th>
                 </tr>
                 <tr class="table-contenuto-dispari">
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat
+                    <th class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat
                         consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia
                         modi. Totam saepe quibusdam natus harum.</th>
                 </tr>
@@ -94,10 +94,10 @@
     <footer>
         <section>
             <h5>Potrebbe interessarti:</h5>
-            <div class="prima-proposta">
+            <div class="proposta computer">
                 Lorem ipsum dolor
             </div>
-            <div class="seconda-proposta">
+            <div class="proposta grafico">
                 Lorem ipsum dolor
             </div>
         </section>
